src/OpenCvSharp.Native/include/open_cv_sharp/photo/photo.h

typedef struct jyppx_ocv_color_correction_model jyppx_ocv_color_correction_model;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_gamma_correction(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double gamma);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_create(
    jyppx_ocv_color_correction_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_create_color_checker(
    const jyppx_ocv_mat* src,
    int color_checker,
    jyppx_ocv_color_correction_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_create_reference_colors(
    const jyppx_ocv_mat* src,
    const jyppx_ocv_mat* colors,
    int reference_color_space,
    jyppx_ocv_color_correction_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_create_reference_colors_masked(
    const jyppx_ocv_mat* src,
    const jyppx_ocv_mat* colors,
    int reference_color_space,
    const jyppx_ocv_mat* colored_patches_mask,
    jyppx_ocv_color_correction_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_photo_ccm_release_handle(
    jyppx_ocv_color_correction_model* model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_color_space(
    jyppx_ocv_color_correction_model* model,
    int color_space);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_ccm_type(
    jyppx_ocv_color_correction_model* model,
    int ccm_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_distance(
    jyppx_ocv_color_correction_model* model,
    int distance);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_linearization(
    jyppx_ocv_color_correction_model* model,
    int linearization);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_linearization_gamma(
    jyppx_ocv_color_correction_model* model,
    double gamma);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_linearization_degree(
    jyppx_ocv_color_correction_model* model,
    int degree);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_saturated_threshold(
    jyppx_ocv_color_correction_model* model,
    double lower,
    double upper);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_weights_list(
    jyppx_ocv_color_correction_model* model,
    const jyppx_ocv_mat* weights_list);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_weight_coeff(
    jyppx_ocv_color_correction_model* model,
    double weight_coeff);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_initial_method(
    jyppx_ocv_color_correction_model* model,
    int initial_method);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_max_count(
    jyppx_ocv_color_correction_model* model,
    int max_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_epsilon(
    jyppx_ocv_color_correction_model* model,
    double epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_set_rgb(
    jyppx_ocv_color_correction_model* model,
    int rgb);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_compute(
    jyppx_ocv_color_correction_model* model,
    jyppx_ocv_mat* color_correction_matrix);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_get_color_correction_matrix(
    const jyppx_ocv_color_correction_model* model,
    jyppx_ocv_mat* color_correction_matrix);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_get_loss(
    const jyppx_ocv_color_correction_model* model,
    double* loss);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_get_src_linear_rgb(
    const jyppx_ocv_color_correction_model* model,
    jyppx_ocv_mat* src_linear_rgb);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_get_ref_linear_rgb(
    const jyppx_ocv_color_correction_model* model,
    jyppx_ocv_mat* ref_linear_rgb);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_get_mask(
    const jyppx_ocv_color_correction_model* model,
    jyppx_ocv_mat* mask);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_get_weights(
    const jyppx_ocv_color_correction_model* model,
    jyppx_ocv_mat* weights);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_correct_image(
    const jyppx_ocv_color_correction_model* model,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int is_linear);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_write(
    const jyppx_ocv_color_correction_model* model,
    jyppx_ocv_core_file_storage* storage);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_photo_ccm_read(
    jyppx_ocv_color_correction_model* model,
    const jyppx_ocv_core_file_node* node);